Change NativeBackendKWallet::background_task_runner_ to SingleThreadTaskRunner

DBus requires a single thread, and NativeBackendKWallet communicates with DBus
on the background task runner.

Bug: 769381
Change-Id: I643fbdcf0efd5647fc3fc27106748ac2226c5e03