chrome/browser/password_manager/native_backend_kwallet_x.h
@@ -13,7 +13,7 @@
 #include "base/macros.h"
 #include "base/memory/ref_counted.h"
 #include "base/nix/xdg_util.h"
-#include "base/sequenced_task_runner.h"
+#include "base/single_thread_task_runner.h"
 #include "base/time/time.h"
 #include "chrome/browser/password_manager/password_store_factory.h"
 #include "chrome/browser/password_manager/password_store_x.h"
@@ -142,7 +142,10 @@ class NativeBackendKWallet : public PasswordStoreX::NativeBackend {
   // Generates a profile-specific folder name based on profile_id_.
   std::string GetProfileSpecificFolderName() const;
 
-  scoped_refptr<base::SequencedTaskRunner> background_task_runner_;
+  // Use a single-thread instead of just a sequenced task runner, because DBus
+  // code needs to run on a single thread. See https://crbug.com/769381 for more
+  // context.
+  scoped_refptr<base::SingleThreadTaskRunner> background_task_runner_;
 
   // The local profile id, used to generate the folder name.
   const LocalProfileId profile_id_;
